--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -1032,9 +1032,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.extended .show-apps { transition-duration: 100ms; }
 
-#dashtodockContainer.extended .show-apps .overview-icon { border-radius: 0; border: none; }
-
-#dashtodockContainer.extended .show-apps:active .overview-icon, #dashtodockContainer.extended .show-apps:checked .overview-icon { background-color: #fb6f55; box-shadow: none; }
+#dashtodockContainer.extended .show-apps .overview-icon { border: none; }
 
 #dashtodockContainer.left.extended { box-shadow: inset 3px 0 rgba(0, 0, 0, 0.4); }
 
@@ -1100,9 +1098,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.extended .show-apps { transition-duration: 100ms; }
 
-#dashtodockContainer.extended .show-apps .overview-icon { border-radius: 0; border: none; }
-
-#dashtodockContainer.extended .show-apps:active .overview-icon, #dashtodockContainer.extended .show-apps:checked .overview-icon { background-color: #fb6f55; box-shadow: none; }
+#dashtodockContainer.extended .show-apps .overview-icon { border: none; }
 
 #dashtodockContainer.right.extended { box-shadow: inset -3px 0 rgba(0, 0, 0, 0.4); }
 
@@ -1168,9 +1164,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.extended .show-apps { transition-duration: 100ms; }
 
-#dashtodockContainer.extended .show-apps .overview-icon { border-radius: 0; border: none; }
-
-#dashtodockContainer.extended .show-apps:active .overview-icon, #dashtodockContainer.extended .show-apps:checked .overview-icon { background-color: #fb6f55; box-shadow: none; }
+#dashtodockContainer.extended .show-apps .overview-icon { border: none; }
 
 #dashtodockContainer.bottom.extended { box-shadow: inset 0 -3px rgba(0, 0, 0, 0.4); }
 
@@ -1236,9 +1230,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.extended .show-apps { transition-duration: 100ms; }
 
-#dashtodockContainer.extended .show-apps .overview-icon { border-radius: 0; border: none; }
-
-#dashtodockContainer.extended .show-apps:active .overview-icon, #dashtodockContainer.extended .show-apps:checked .overview-icon { background-color: #fb6f55; box-shadow: none; }
+#dashtodockContainer.extended .show-apps .overview-icon { border: none; }
 
 #dashtodockContainer.top.extended { box-shadow: inset 0 3px rgba(0, 0, 0, 0.4); }
 
