--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -436,16 +436,14 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
 // $s2: shadow2
 //
   background-color: $c;
-  box-shadow: 
+  box-shadow:
     inset 0 1px $hc,
-    inset 0 -1px if($darker=='true', transparent, $s2),
-    0 1px if($darker=='true', transparent, $s1),
-    0 2px if($darker=='true', transparent, $s2);
+    inset 0 -1px if($darker=='true', transparent, $s2);
 }
 
 @mixin ssd_fill($c:$header_bg, $hc:transparentize(white, 0.96)) {
 //
-// headerbar fill
+// server side decoration fill
 //
 // $c:  bg color
 // $hc: top highlight color
