--- a/gtk-3.0/gtk-contained-dark.css
+++ b/gtk-3.0/gtk-contained-dark.css
@@ -478,7 +478,7 @@ searchbar > revealer > box { margin: -6px; padding: 6px; }
 .inline-toolbar, searchbar > revealer > box, .location-bar { background-color: #343434; }
 
 /*************** Header bars * */
-.titlebar:not(headerbar), headerbar { padding: 0 4px; min-height: 38px; border-width: 0; border-style: solid; border-color: #272727; background-color: #4d4d4d; box-shadow: inset 0 1px rgba(255, 255, 255, 0.04), inset 0 -1px transparent, 0 1px transparent, 0 2px transparent; }
+.titlebar:not(headerbar), headerbar { padding: 0 4px; min-height: 38px; border-width: 0; border-style: solid; border-color: #272727; background-color: #4d4d4d; box-shadow: inset 0 1px rgba(255, 255, 255, 0.04), inset 0 -1px transparent; }
 
 .titlebar:backdrop:not(headerbar), headerbar:backdrop { border-color: #272727; background-image: none; color: #a09f9f; }
 
@@ -486,7 +486,7 @@ searchbar > revealer > box { margin: -6px; padding: 6px; }
 
 .titlebar:not(headerbar) .subtitle, headerbar .subtitle { font-size: smaller; padding-left: 12px; padding-right: 12px; }
 
-.selection-mode.titlebar:not(headerbar), headerbar.selection-mode { color: #ffffff; text-shadow: 0 -1px rgba(0, 0, 0, 0.5); border-color: #e52805; background-color: #fb6f55; box-shadow: inset 0 1px rgba(251, 118, 93, 0.55), inset 0 -1px transparent, 0 1px transparent, 0 2px transparent; }
+.selection-mode.titlebar:not(headerbar), headerbar.selection-mode { color: #ffffff; text-shadow: 0 -1px rgba(0, 0, 0, 0.5); border-color: #e52805; background-color: #fb6f55; box-shadow: inset 0 1px rgba(251, 118, 93, 0.55), inset 0 -1px transparent; }
 
 .selection-mode.titlebar:backdrop:not(headerbar), headerbar.selection-mode:backdrop { background-color: #fb6f55; background-image: none; box-shadow: inset 0 1px rgba(250, 121, 96, 0.46); }
 
@@ -588,7 +588,7 @@ window.tiled headerbar, window.tiled headerbar:first-child, window.tiled headerb
 
 window.csd > .titlebar:not(headerbar) { padding: 0; background-color: transparent; background-image: none; border-style: none; border-color: transparent; box-shadow: none; }
 
-.titlebar:not(headerbar) > separator { background-color: #4d4d4d; box-shadow: inset 0 1px rgba(255, 255, 255, 0.04), inset 0 -1px transparent, 0 1px transparent, 0 2px transparent; }
+.titlebar:not(headerbar) > separator { background-color: #4d4d4d; box-shadow: inset 0 1px rgba(255, 255, 255, 0.04), inset 0 -1px transparent; }
 
 /************ Pathbars * */
 filechooser #pathbarbox { background-color: #2f2f2f; border-bottom: 1px solid #272727; }
@@ -1268,7 +1268,7 @@ calendar.highlight { color: #a09f9f; }
 calendar:indeterminate { color: alpha(currentColor,0.1); }
 
 /*********** Dialogs * */
-messagedialog .titlebar { min-height: 20px; background-image: none; background-color: #4d4d4d; border-style: none; border-top-left-radius: 2px; border-top-right-radius: 2px; background-color: #4d4d4d; box-shadow: inset 0 1px rgba(255, 255, 255, 0.04), inset 0 -1px transparent, 0 1px transparent, 0 2px transparent; }
+messagedialog .titlebar { min-height: 20px; background-image: none; background-color: #4d4d4d; border-style: none; border-top-left-radius: 2px; border-top-right-radius: 2px; background-color: #4d4d4d; box-shadow: inset 0 1px rgba(255, 255, 255, 0.04), inset 0 -1px transparent; }
 
 messagedialog.csd.background { border-bottom-left-radius: 2px; border-bottom-right-radius: 2px; }
 
@@ -1486,9 +1486,9 @@ messagedialog.csd decoration { border-radius: 2px; box-shadow: 0 1px 2px rgba(0,
 
 headerbar.default-decoration button.titlebutton, .titlebar.default-decoration button.titlebutton { padding: 0 4px; min-width: 0; min-height: 22px; margin: 0; }
 
-headerbar .right.horizontal, .titlebar .right.horizontal { border-left: 1px solid rgba(0, 0, 0, 0.2); padding-left: 4px; }
+headerbar .right.horizontal, .titlebar .right.horizontal { border-left: 1px solid rgba(0, 0, 0, 0.2); border-left: 0; padding-left: 4px; }
 
-headerbar .left.horizontal, .titlebar .left.horizontal { border-right: 1px solid rgba(0, 0, 0, 0.2); padding-right: 4px; }
+headerbar .left.horizontal, .titlebar .left.horizontal { border-right: 1px solid rgba(0, 0, 0, 0.2); border-right: 0; padding-right: 4px; }
 
 headerbar button.titlebutton, .titlebar button.titlebutton { padding: 0; min-width: 22px; min-height: 22px; margin: 2px; border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(242, 241, 240, 0); text-shadow: none; -gtk-icon-shadow: none; }
 
