--- a/gnome-shell/gnome-shell-sass/_drawing.scss
+++ b/gnome-shell/gnome-shell-sass/_drawing.scss
@@ -144,9 +144,10 @@
     color: $osd_fg_color;
     background-color: $_bg;
     box-shadow: inset 0 0 0 1px transparentize(white, 0.9);
-    border-color: transparentize(black, 0.9);
+    border-color: transparent;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black;
+    border: 1px solid;
   }
 
   @else if $t==hover {
@@ -157,11 +158,10 @@
                             lighten($osd_bg_color, 10%));
 
     color: white;
-    border-color: transparentize(black, 0.9);
+    border-color: transparent;
     background-color: $_bg;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black;
-
   }
 
   @if $t==focus {
@@ -192,8 +192,8 @@
   //
     color: white;
     background-color: transparentize(black, 0.6); 
-    box-shadow: inset 0 0 0 2px transparentize(black, 0.7);
-    border: 1px solid transparentize(white, 0.9);
+    box-shadow: inset 0 0 0 1px transparentize(black, 0.7);
+    border-color: transparentize(white, 0.9);
     text-shadow: none;
     icon-shadow: none;
   }
