--- a/gtk-3.0/_colors.scss
+++ b/gtk-3.0/_colors.scss
@@ -73,8 +73,9 @@ $backdrop_scrollbar_slider_color: mix($backdrop_fg_color, $backdrop_bg_color, 40
 
 $backdrop_menu_color: if($variant == 'light', $backdrop_base_color, mix($backdrop_bg_color, $backdrop_base_color, 20%));
 
-// Secondary BG color for notebooks and other elements
+// Secondary colors for notebooks and other elements
 $secondary_bg_color: mix($bg_color, $base_color, 50%);
+$secondary_borders_color: darken($secondary_bg_color, 8%);
 
 //title buttons
 $close_button: transparentize($selected_bg_color, 0.4); //#b55f5f;
