--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -3222,6 +3222,8 @@ placessidebar {
     box-shadow: inset -2px 0 transparentize(black, 0.98), 
                 inset -1px 0 transparentize(black, 0.94);
   }
+  
+  separator { border-top: 1px solid $secondary_borders_color; }
 
   row {
     // Needs overriding of the GtkListBoxRow padding
