--- a/gtk-3.0/gtk-contained-dark.css
+++ b/gtk-3.0/gtk-contained-dark.css
@@ -1308,6 +1308,8 @@ row image.sidebar-icon { opacity: 0.7; }
 
 placessidebar > viewport.frame { border-style: none; border-right: #272727; box-shadow: inset -2px 0 rgba(0, 0, 0, 0.02), inset -1px 0 rgba(0, 0, 0, 0.06); }
 
+placessidebar separator { border-top: 1px solid #1b1b1b; }
+
 placessidebar row { min-height: 36px; padding: 0px; }
 
 placessidebar row > revealer { padding: 0 14px; }
