--- a/gtk-3.0/gtk-contained.css
+++ b/gtk-3.0/gtk-contained.css
@@ -1318,6 +1318,8 @@ row image.sidebar-icon { opacity: 0.7; }
 
 placessidebar > viewport.frame { border-style: none; border-right: #b9b9b5; box-shadow: inset -2px 0 rgba(0, 0, 0, 0.02), inset -1px 0 rgba(0, 0, 0, 0.06); }
 
+placessidebar separator { border-top: 1px solid #dbdbd9; }
+
 placessidebar row { min-height: 36px; padding: 0px; }
 
 placessidebar row > revealer { padding: 0 14px; }
