--- a/gtk-3.0/gtk-contained-dark.css
+++ b/gtk-3.0/gtk-contained-dark.css
@@ -1785,3 +1785,9 @@ window.background.chromium button { border-color: #272727; }
 .gedit-search-slider button, .gedit-search-slider button:hover { box-shadow: none; border: 1px solid #272727; }
 
 .gedit-search-slider button:last-child, .gedit-search-slider button:hover:last-child { border-left: 0; }
+
+#MozillaGtkWidget.background headerbar.titlebar { border-radius: 0; }
+
+#MozillaGtkWidget.background > menu, #MozillaGtkWidget.background .menu { border: none; }
+
+#MozillaGtkWidget.background > menu > menuitem { border-radius: 0; }
