--- a/gtk-3.0/_variables.scss
+++ b/gtk-3.0/_variables.scss
@@ -1,3 +1,6 @@
+// Sizes
+$b_size: 22px; // Titlebuttons default size
+
 // radius
 $br_b: 2px; // Default button and entry radius
 $br_w: 2px; // Rounded corners on decorations
