--- a/gtk-3.0/gtk-contained.css
+++ b/gtk-3.0/gtk-contained.css
@@ -538,7 +538,7 @@ searchbar > revealer > box { margin: -6px; padding: 6px; }
 
 .default-decoration.titlebar:not(headerbar), headerbar.default-decoration { padding: 4px; min-height: 28px; }
 
-.default-decoration.titlebar:not(headerbar) button.titlebutton, headerbar.default-decoration button.titlebutton { min-height: 24px; min-width: 24px; margin: 0; padding: 0; }
+.default-decoration.titlebar:not(headerbar) button.titlebutton, headerbar.default-decoration button.titlebutton { min-height: 22px; min-width: 22px; margin: 0; padding: 0; }
 
 .titlebar:not(headerbar) separator, .titlebar:not(headerbar) separator:backdrop, headerbar separator, headerbar separator:backdrop { background-color: #4d4d4d; }
 
@@ -1492,9 +1492,11 @@ messagedialog.csd decoration { border-radius: 2px; box-shadow: 0 1px 2px rgba(0,
 
 .solid-csd decoration { border-radius: 0; margin: 4px; background-color: #dededc; border: solid 1px #bdbdb9; box-shadow: none; }
 
+.ssd .titlebar.default-decoration button.titlebutton, headerbar button.titlebutton, .titlebar button.titlebutton, #MozillaGtkWidget.background headerbar.titlebar button.titlebutton { min-width: 22px; min-height: 22px; padding: 0; margin: 2px; }
+
 .ssd .titlebar { border-width: 0; background-color: #4d4d4d; box-shadow: inset 0 1px rgba(255, 255, 255, 0.04); padding: 2px 4px; }
 
-.ssd .titlebar.default-decoration button.titlebutton { min-width: 22px; min-height: 22px; padding: 0; margin: 2px; transition-duration: 100ms; }
+.ssd .titlebar.default-decoration button.titlebutton { transition-duration: 100ms; }
 
 headerbar.default-decoration button.titlebutton, .titlebar.default-decoration button.titlebutton { padding: 0 4px; min-width: 0; min-height: 22px; margin: 0; }
 
@@ -1502,7 +1504,7 @@ headerbar .right.horizontal, .titlebar .right.horizontal { border-left: 1px soli
 
 headerbar .left.horizontal, .titlebar .left.horizontal { border-right: 1px solid rgba(0, 0, 0, 0.2); padding-right: 4px; }
 
-headerbar button.titlebutton, .titlebar button.titlebutton { padding: 0; min-width: 22px; min-height: 22px; margin: 2px; border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0); text-shadow: none; -gtk-icon-shadow: none; }
+headerbar button.titlebutton, .titlebar button.titlebutton { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0); text-shadow: none; -gtk-icon-shadow: none; }
 
 headerbar button.titlebutton.close, .titlebar button.titlebutton.close { color: transparent; background-color: transparent; background-position: center; background-repeat: no-repeat; border-width: 0; box-shadow: none; transition-duration: 100ms; background-color: rgba(251, 111, 85, 0.6); box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.16); }
 
@@ -1801,3 +1803,17 @@ window.background.chromium button { border-color: #b9b9b5; }
 #MozillaGtkWidget.background > menu, #MozillaGtkWidget.background .menu { border: none; }
 
 #MozillaGtkWidget.background > menu > menuitem { border-radius: 0; }
+
+#MozillaGtkWidget.background entry, #MozillaGtkWidget.background button { border-color: #b9b9b5; }
+
+#MozillaGtkWidget.background entry:focus, #MozillaGtkWidget.background button:focus { border-color: #fb6f55; }
+
+normal-button { color: #3C3C3C; outline-color: rgba(60, 60, 60, 0.3); background-color: #f4f4f4; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.16), 0 1px rgba(165, 165, 160, 0.1); border-color: transparent; border-bottom-color: transparent; }
+
+normal-button:hover { color: #3C3C3C; background-color: #fcfcfc; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.35), 0 2px 3px rgba(0, 0, 0, 0.25); }
+
+normal-button:active { color: #3C3C3C; outline-color: rgba(60, 60, 60, 0.3); background-color: #cacac7; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a5a5a0; border-bottom-color: #a5a5a0; border-top-color: #8c8c85; }
+
+normal-button:disabled { color: #8d8d8c; background-color: #cececc; text-shadow: none; -gtk-icon-shadow: none; box-shadow: none; border-color: transparent; }
+
+normal-button:disabled > .label { color: inherit; }
