--- a/gtk-3.0/_variables.scss
+++ b/gtk-3.0/_variables.scss
@@ -1,5 +1,5 @@
-// Sizes
-$b_size: 22px; // Titlebuttons default size
+// sizes
+$titlebutton_size: 22px; // Titlebuttons default size
 
 // radius
 $br_b: 2px; // Default button and entry radius
